# Simple-ML-Automation

./: README.md  pyproject.toml  run_monitoring.sh  setup.cfg  tox.ini
