[metadata]
name = simpleML
version = 0.0.1
description = Simple ML Automation with MLflow and Airflow
long_description = file: README.md
long_description_content_type = text/markdown
author = Amr
author_email = amrahmedelagoz@gmail.com
url = https://github.com/Andalusia-Data-Science-Team/localEmb.git
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.12
keywords = machine learning, python

[options]
packages = find:
package_dir =
    = src
python_requires = >=3.10

install_requires=
    apache-airflow==3.0.1
    pytorch-lightning==2.5.1.post0
    torchvision==0.22.0
    torch==2.7.0
    mlflow==2.22.0
    prometheus-client==0.21.1
    apache-airflow-providers-fab==2.0.2

[options.packages.find]
where = src
exclude =
    test

[options.extras_require]
testing =
    pytest==8.3.4
    Sphinx==8.1.3
    sphinx-rtd-theme==3.0.2
    sphinx-autodoc-typehints==2.5.0
    pytest-cov==6.0.0
    mypy==1.13.0
    flake8==7.1.1
    tox==4.23.2
    black==24.10.0
    pytest-mock==3.14.0
    pytest-watcher==0.4.3

[options.package_data]
simpleML = py.typed


[flake8]
max-line-length = 88
extend-ignore = E501, E203